Summary of important user-visible changes for releases of the signal package

===============================================================================
signal-1.2.X   Release Date: XXXX-XX-XX   Release Manager:
===============================================================================

 ** The following functions are new:

      findpeaks
      fwht
      ifwht

 ** Improved Matlab compatibility for the following window functions:

      barthannwin
      blackmanharris
      blackmannuttall
      chebwin
      flattopwin
      nuttallwin

    The changes include always returning a column vector, returning a valid
    window for a length argument of 1, and making all arguments after the
    length optional.

 ** signal is no longer dependent on the optim package.

===============================================================================
signal-1.2.0   Release Date: 2012-09-21   Release Manager: Carnë Draug
===============================================================================

 ** Improved Matlab compability for the function `fir2'. This changes include
    always returning vaues in a row (even when the smoothing window is a single
    column), the default values for grid_n and ramp_n, and returning an error
    when invalid values are used (instead of silently adjusting them).

 ** Fixed failing tests for the following functions:

      fir1      pei_tseng_notch     residued

 ** The function `rceps' was fixed to work correctly with odd-length inputs.

 ** Bugfix in `xcorr2' introduced in 1.1.2 that would not accept "none" as
    scale option.

 ** `xcorr2' scaling option "coeff" was changed to return the normalized
    cross-correlation.

 ** The following functions are new:

      movingrms     schtrig     clustersegment

 ** signal is no longer dependent on the image package.

 ** signal is now dependent on the general package.

===============================================================================